--- a/pyrobots/package.json
+++ b/pyrobots/package.json
@@ -39,9 +39,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0"
+    "@testing-library/react": "^13.4.0",
+    "jest-canvas-mock": "^2.4.0"
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!axios)"]
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)"
+    ]
   }
 }
