--- a/pyrobots/package.json
+++ b/pyrobots/package.json
@@ -40,7 +40,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "jest-canvas-mock": "^2.4.0"
+    "jest-canvas-mock": "^2.4.0",
+    "jest-websocket-mock": "^2.4.0"
   },
   "jest": {
     "transformIgnorePatterns": [
